--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -22,6 +22,7 @@
             android:layout_centerInParent="true"
             android:layout_width="match_parent"
             android:gravity="center"
+            android:layout_marginBottom="18dp"
             android:layout_height="wrap_content"
             android:text="@string/defaultQuote" />
 
